--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1>DiverCity Property Solutions</h1>
             <h3>Currently under construction</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="#about" class="btn btn-dark btn-lg">Find Out More!</a>
         </div>
     </header>
 
