--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
                 <a href="#services" onclick=$("#menu-close").click();>Services</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-            </li>
-            <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
             </li>
         </ul>
@@ -73,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                    <h2>Independent property consultants offering unique and unbiased property insight. Pro-Africa and pro-global markets. [Market analysis, strategy & innovation]</h2>
                     <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
                 </div>
             </div>
