--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>DiverCity Property Solutions</h1>
-            <h3>Currently under construction</h3>
+            <h3>Training & Consulting</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More!</a>
         </div>
@@ -70,8 +70,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Independent property consultants offering unique and unbiased property insight. Pro-Africa and pro-global markets. Market analysis, strategy and innovation</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    <h2>Independent property consultants offering effective and informed training and advisory. African focus, global perspective. Education, market analysis, strategy and innovation</h2>
+                    <p class="lead">Sean Godoy is the Director and founder, view his LinkedIn profile here <a target="_blank" href="https://www.linkedin.com/in/sean-godoy-6270582a/">Death to the Stock Photo</a>.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -95,9 +95,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Training</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>We offer a suite of courses developed for property companies or companies who work in the property industry. From an introductory focus to executive level.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -108,9 +108,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Strategy & Innovation</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Property markets are experiencing rapid change due to technology and evolution of the built environment. We offer insight and guidance to navigate this change effectively.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -121,9 +121,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Market Analysis</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Informed and unbiased insight into market dynamics, combining a global focus with local knowledge.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -134,9 +134,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Local Partner</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>When entering any new market as a business or individual, it is crucial to have a reliable local partner who can offer knowledge and access to a valuable network.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1>Independant, Unbiased & Informed</h1>
         </div>
     </aside>
 
@@ -209,7 +209,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
+                    <h3>Contact Us.</h3>
                     <a href="#" class="btn btn-lg btn-light">Click Me!</a>
                     <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
                 </div>
@@ -232,19 +232,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                    <h4><strong>Divercity Property Solutions</strong>
                     </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
+                    <p>37 Bath Avenue
+                        <br>Rosebank, Johannesburg, 2196</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i> (0027) 082 351 0319</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:sean@divercityproperty.com">name@example.com</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
