--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Independent property consultants offering effective and informed training and advisory. African focus, global perspective. Education, market analysis, strategy and innovation</h2>
-                    <p class="lead">Sean Godoy is the Director and founder, view his LinkedIn profile here <a target="_blank" href="https://www.linkedin.com/in/sean-godoy-6270582a/">Death to the Stock Photo</a>.</p>
+                    <p class="lead">Sean Godoy is the Director and founder, view his LinkedIn profile here <a target="_blank" href="https://www.linkedin.com/in/sean-godoy-6270582a/">LinkedIn Profile>/a>.</p>
                 </div>
             </div>
             <!-- /.row -->
