--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Contact Us.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <a href="#" class="btn btn-lg btn-light">Email</a>
+                    <a href="#" class="btn btn-lg btn-dark">LinkedIn</a>
                 </div>
             </div>
         </div>
@@ -219,10 +219,10 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.co.za/maps/place/37+Bath+Ave,+Rosebank,+Johannesburg,+2196/@-26.1487831,28.039641,13.57z/data=!4m5!3m4!1s0x1e950c8d6efd5187:0x4afd2f268fc4e06!8m2!3d-26.1450784!4d28.0403897"></iframe>
         <br />
         <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+            <a href="https://www.google.co.za/maps/place/37+Bath+Ave,+Rosebank,+Johannesburg,+2196/@-26.1487831,28.039641,13.57z/data=!4m5!3m4!1s0x1e950c8d6efd5187:0x4afd2f268fc4e06!8m2!3d-26.1450784!4d28.0403897"></a>
         </small>
         </iframe>
     </section>
