--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <br>Rosebank, Johannesburg, 2196</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (0027) 082 351 0319</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:sean@divercityproperty.com">name@example.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:sean@divercityproperty.com">sean@divercityproperty.com</a>
                         </li>
                     </ul>
                     <br>
