--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="https://drive.google.com/open?id=0Bx7kMS8nSmP4Y1dMVHhxSEdwd00">
                                 </a>
                             </div>
                         </div>
