--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="https://github.com/Sean-el-Toro/sean-el-Toro.github.io.wiki.git">
+                                    <img class="img-portfolio img-responsive" src=https://github.com/Sean-el-Toro/sean-el-Toro.github.io.wiki.git>
                                 </a>
                             </div>
                         </div>
