--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/Profilepic.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/Profile pic 2.jpg">
                                 </a>
                             </div>
                         </div>
