--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/Francois 1.html">
                                 </a>
                             </div>
                         </div>
