--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -175,7 +174,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/Francois 1.html">
+                                    <img class="img-portfolio img-responsive" src="img/Francois1.jpg">
                                 </a>
                             </div>
                         </div>
