--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/Francois1.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/Francois2.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/Francois2.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/">
                                 </a>
                             </div>
                         </div>
