--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Independent property consultants offering effective and informed training and advisory. African focus, global perspective. Education, market analysis, strategy and innovation</h2>
+                    <h2>Independent property consultants offering innovative training and advisory with the aim of adding value at every step. African focus, global perspective. Education, market analysis, strategy and innovation</h2>
                     <p class="lead">Sean Godoy is the Director and founder of DPS, view his LinkedIn profile <a target="_blank" href="https://www.linkedin.com/in/sean-godoy-6270582a/">here</p>
                 </div>
             </div>
