--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Independent property consultants offering effective and informed training and advisory. African focus, global perspective. Education, market analysis, strategy and innovation</h2>
                     <p class="lead">Sean Godoy is the Director and founder of DPS, view his LinkedIn profile <a target="_blank" href="https://www.linkedin.com/in/sean-godoy-6270582a/">here</p>
+                         <p class="lead">Professor Francois Viruly is an associate with DPD, view his LinkedIn profile <a target="_blank" href="https://www.linkedin.com/in/francois-viruly-23064824/">here</p>
                 </div>
             </div>
             <!-- /.row -->
